--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidas.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidas.html
@@ -67,8 +67,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     
         <br> 
-        
-      
   
 
                </div>
@@ -181,7 +179,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     swal({
     title: "Exito!",
-            text: "Registro agregado correctamente",
+            text: "Registro eliminado correctamente",
             type: "success",
             icon: "success"
             }).then(function() {
