--- a/src/main/resources/templates/fragments/contrato/contratoshow.html
+++ b/src/main/resources/templates/fragments/contrato/contratoshow.html
@@ -261,7 +261,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success"
        }).then(function() {
-                location.href = '../../empleados/';
+//                location.href = '../../empleados/';
+ location.href = '../../../empleados/show/'+[[${empleado}]];
        }); 
 }
     
