--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidads.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidads.html
@@ -40,19 +40,18 @@
 }
  </style>
      
-    <title>SISADMRH-Consulta de Datos de Capacitaciones Recibidas</title>
+    <title>SISADMRH-Consulta de Datos de Hijo Con Discapacidad</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<!--      <div class="contenedorizq"><label  >pnt_cem5_2</label>  
+    <script> Textheader('pnt_ce13_2',document.title);</script>
+<!--      <div class="contenedorizq"><label  >pnt_ce13_2</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div><br>-->
-<script> Textheader('pnt_cem5_2',document.title);</script>
-
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
@@ -60,15 +59,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         </div>
         <div class="col-md-8">
             <div class="row text-center">
-                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/discapacidad.jpg}"/>
             </div>
     <h3 align="center"></h3>
     
 
     
-        <br> 
-        
-      
+        <br>
+           
   
 
                </div>
@@ -181,7 +179,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     swal({
     title: "Exito!",
-            text: "Registro agregado correctamente",
+            text: "Registro eliminado correctamente",
             type: "success",
             icon: "success"
             }).then(function() {
