--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -75,7 +75,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="form-group">
                         <label class="col-sm-2 control-label ">Horas Recibidas:</label>
                         <div class="col-sm-2">
-                            <input type="text" class="form-control numeros" required="true" maxlength="3" name="horasrecibidas" th:text="${d.horasrecibidas}'>
+                            <input type="text" class="form-control numeros" required="true" maxlength="3" name="horasrecibidas"/>
                         </div>
                              <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('horas')" onmouseout ="javascript:ocultarAyuda('horas')">a</a></b>
@@ -112,7 +112,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="form-group">
                         <label class="col-sm-2 control-label ">Telefono:</label>
                         <div class="col-sm-2">
-                            <input type="text" class="form-control num_telefono" required="true" name="telefono"/>
+                            <input type="text" id="telefonoo"class="form-control num_telefono" required="true" name="telefono"/>
                         </div>
                              <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('telefono')" onmouseout ="javascript:ocultarAyuda('telefono')">a</a></b>
@@ -125,7 +125,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Correo:</label>
                         <div class="col-sm-6">
-                            <input type="email" class="form-control" size="50" maxlength="50" required="true" name="email"/>
+                            <input type="email" id="correoo"class="form-control" size="50" maxlength="50" required="true" name="email"/>
                         </div>
                              <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('correo')" onmouseout ="javascript:ocultarAyuda('correo')">a</a></b>
@@ -134,16 +134,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
 
-                    <!--             <div class="form-group">
-                                    <label class="col-sm-2 control-label">Responsable del Comite:</label>
-                                                         <div class="col-sm-10">
-                                                             <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                                                    <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
-                                                </select>
-                                   <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                                              </div>
-                                                    </div>-->
-
+                   
 
                     <div class="col-md-12">
                         <div class="row" align="center">
@@ -173,10 +164,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                  $.ajax({
                     url : '../llenadocombo/' + $( this ).val().toString(),
                     success : function(data) {
+                        $('#correoo').val(data[3]);
+                           $('#telefonoo').val(data[2]);
                         $('#ubicacion').val(data[1]);
                         $('#puesto').val(data[0]);
                     },
                     error: function() {
+                        ('#correoo').val("");
+                        $('#telefonoo').val("");
                         $('#ubicacion').val("");
                         $('#puesto').val("");
                     }
