--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -36,7 +36,7 @@
                         <label class="col-sm-2 control-label">Nombre Capacitación:</label>
                         <div class="col-sm-8">
                         <select class="form-control" name="asistenciacapacitacion.codigoasistenciacapacitacion" id="asistencia" >
-                                <option th:each="c:${formasistenciaempleadocapacitacion.asistenciacapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.ubicacionasistenciacapacitacion}"></option>
+                                <option th:each="c:${formasistenciaempleadocapacitacion.asistenciacapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.codigocapacitacion.nombrecapacitacion}"></option>
                         </select>
                         </div>
                     </div>
